bug fix: don't wrap antd col inside div with css, watch for overrides

--- a/src/styles/videos/content.module.css
+++ b/src/styles/videos/content.module.css
@@ -23,7 +23,7 @@
 
 /* row */
 .row {
-  padding: 0 0% 0 0%;
+  padding: 10px 1%;
 }
 .col {
   padding: 10px;
